--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- لتحسين عرض الموقع على الهواتف -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- وصف الموقع لتحسين محركات البحث -->
+<meta name="description" content="نظام حضور الكتروني 2026">
+<meta name="keywords" content="Attendance, System, Students, Online">
+
   <title>Attendance Management System</title>
   <style>
     :root {
@@ -293,3 +300,4 @@
   </script>
 </body>
 </html>
+
