--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
       "908": "https://docs.google.com/spreadsheets/d/1v4AlFpVeBymHIwMgEEVIT3iUgtAM2QeTz1OEegaa4t0/edit#gid=1582239076"
     };
 
-    const collegeLat = 30.224647;
-    const collegeLon = 31.327039;
+    const collegeLat = 30.1040372;
+    const collegeLon = 31.2942036;
 
     function getDistance(lat1, lon1, lat2, lon2) {
       const R = 6371;
@@ -300,5 +300,6 @@
   </script>
 </body>
 </html>
+
 
 
