--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- وصف الموقع لتحسين محركات البحث -->
-<meta name="description" content="نظام حضور الكتروني 2026">
+<meta name="description" content=" HVT-2026 G3 S1 ">
 <meta name="keywords" content="Attendance, System, Students, Online">
 
   <title>Attendance Management System</title>
@@ -300,6 +300,7 @@
   </script>
 </body>
 </html>
+
 
 
 
