--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:image" content="https://mk9412017-lab.github.io/attendance-system-2026/preview.png">
 
 <!-- (اختياري بعد التسجيل في Google Search Console) -->
-<!-- <meta name="google-site-verification" content="ضع هنا الكود الذي يعطيك إياه جوجل بعد التسجيل في Search Console" /> -->
+ <meta name="google-site-verification" content="googleab20648116793dcd" />
 
   <title>Attendance Management System</title>
   <style>
@@ -309,6 +309,7 @@
   </script>
 </body>
 </html>
+
 
 
 
