--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <meta property="og:image" content="https://mk9412017-lab.github.io/attendance-system-2026/preview.png">
 
 <!-- (اختياري بعد التسجيل في Google Search Console) -->
- <meta name="google-site-verification" content="googleab20648116793dcd" />
-
+<meta name="google-site-verification" content="XUaqXNShoF8S1shzIOnxhFmmHFSAHmf2V4HP4EzJmPg" />
   <title>Attendance Management System</title>
   <style>
     :root {
@@ -309,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
