--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <!-- تحسين الظهور في جوجل ومحركات البحث -->
 <meta name="description" content="Online Attendance Management System for Helwan University - Faculty of Technology and Education - HVT 2026 G3 S1">
-<meta name="keywords" content="Attendance, Helwan University, HVT 2026, Students, Technology and Education, Mahmoud Kamel">
+<meta name="keywords" content="Attendance, Helwan University, HVT-2026 G3 S5 , Students, Technology and Education, Mahmoud Kamel">
 <meta name="author" content="Mahmoud Kamel">
 
 <!-- لتحسين عرض الموقع على الهواتف -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- معلومات المشاركة على السوشيال ميديا (Facebook / WhatsApp / Telegram) -->
-<meta property="og:title" content="Attendance Management System - HVT 2026 G3 S1">
+<meta property="og:title" content="Attendance Management System - HVT 2026 G3 S5">
 <meta property="og:description" content="Online Attendance System created by Mahmoud Kamel for Helwan University students.">
 <meta property="og:url" content="https://mk9412017-lab.github.io/attendance-system-2026/">
 <meta property="og:type" content="website">
@@ -179,7 +179,7 @@
   <header>Faculty of Technology and Education – Helwan University</header>
   <h2>Attendance Management System</h2>
 
-<p id="groupInfo">HVT - 2026 G3 S1</p>
+<p id="groupInfo">HVT - 2026 G3 S5</p>
 
 
   <!-- Main Menu -->
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
