--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <link rel="icon" type="image/png" href="favicon.png">
+  
   <!-- تحسين الظهور في جوجل ومحركات البحث -->
 <meta name="description" content="Online Attendance Management System for Helwan University - Faculty of Technology and Education - HVT 2026 G3 S1">
 <meta name="keywords" content="Attendance, Helwan University, HVT-2026 G3 S5 , Students, Technology and Education, Mahmoud Kamel">
@@ -308,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
