--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" type="image/png" href="favicon.png">
 
-<meta name="description" content="Online Attendance Management System for Helwan University - Faculty of Technology and Education - HVT 2026 G3 S1">
+<meta name="description" content="Online Attendance Management System for Helwan University - Faculty of Technology and Education - HVT 2026 G3 S5 - BY: MAHMOUD KAMEL">
 <meta name="keywords" content="Attendance, Helwan University, HVT-2026 G3 S5 , Students, Technology and Education, Mahmoud Kamel">
 <meta name="author" content="Mahmoud Kamel">
 
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
