--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
 }
 
 .signature {
-  text-align: center;
+position: relative;
+display: inline-block;
+left: 50%;
+transform: translateX(-50%);
   margin-top: 10px;
   color: #00bfff; /* نفس لون العنوان الأزرق */
   font-style: italic;
@@ -342,6 +345,7 @@ function verifyLocation() {
   </script>
 </body>
 </html>
+
 
 
 
