--- a/index.html
+++ b/index.html
@@ -170,11 +170,10 @@
 }
 
 .signature {
-position: relative;
-display: inline-block;
-left: 50%;
-transform: translateX(-50%);
-  margin-top: 10px;
+  font-family: Tahoma, Arial, sans-serif;
+  display: block;
+  text-align: center;
+  margin: 10px auto;
   color: #00bfff; /* نفس لون العنوان الأزرق */
   font-style: italic;
   font-size: 16px;
@@ -196,7 +195,6 @@ transform: translateX(-50%);
   to { text-shadow: 0 0 12px rgba(0, 191, 255, 0.9); opacity: 1; }
 }
 
-    
 
   </style>
 </head>
@@ -345,6 +343,7 @@ function verifyLocation() {
   </script>
 </body>
 </html>
+
 
 
 
