--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   <p>© 2025 Attendance Management System | All rights reserved</p>
 </footer>
 
-<div class="signature">Mahmoud Kamel</div>
+<div class="signature">MAHMOUD KAMEL</div>
 
 
   <script>
@@ -343,6 +343,7 @@ function verifyLocation() {
   </script>
 </body>
 </html>
+
 
 
 
