--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <link rel="icon" type="image/png" href="logo.png">
+
+<link rel="icon" type="image/png" href="logo.png?v=8">
+<link rel="apple-touch-icon" href="logo.png?v=8">
+
 
 <meta name="description" content="Online Attendance Management System for Helwan University - Faculty of Technology and Education - HVT 2026 G3 S5 - BY: MAHMOUD KAMEL">
 <meta name="keywords" content="Attendance, Helwan University, HVT-2026 G3 S5 , Students, Technology and Education, Mahmoud Kamel">
@@ -343,6 +346,7 @@ function verifyLocation() {
   </script>
 </body>
 </html>
+
 
 
 
