--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-
-<link rel="icon" type="image/png" href="logo.png?v=8">
-<link rel="apple-touch-icon" href="logo.png?v=8">
-
+  
+<!-- Favicon (for all browsers) -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://mk9412017-lab.github.io/Attendance-Management-System/logo.png?v=15">
+<link rel="shortcut icon" href="https://mk9412017-lab.github.io/Attendance-Management-System/logo.png?v=15">
+<link rel="apple-touch-icon" href="https://mk9412017-lab.github.io/Attendance-Management-System/logo.png?v=15">
+<meta name="theme-color" content="#000000">
 
 <meta name="description" content="Online Attendance Management System for Helwan University - Faculty of Technology and Education - HVT 2026 G3 S5 - BY: MAHMOUD KAMEL">
 <meta name="keywords" content="Attendance, Helwan University, HVT-2026 G3 S5 , Students, Technology and Education, Mahmoud Kamel">
@@ -346,6 +348,7 @@ function verifyLocation() {
   </script>
 </body>
 </html>
+
 
 
 
